Update Whitepaper to v1.3 - add Community Rewards section, Appendices, fix numbering

--- a/index.html
+++ b/index.html
@@ -1049,6 +1049,7 @@ a:focus-visible,button:focus-visible{
       <a href="#contracts">Contracts</a>
       <a href="#how">Fair Launch</a>
       <a href="#charity">Charity</a>
+      <a href="#rewards">Rewards</a>
       <a href="#whitepaper">Whitepaper</a>
       <a href="#roadmap">Roadmap</a>
     </nav>
@@ -1627,6 +1628,60 @@ a:focus-visible,button:focus-visible{
       <a href="https://tabletochki.org/" target="_blank" rel="noopener" class="btn btn--secondary" style="font-size:18px;padding:16px 36px">
         Visit Tabletochki Foundation →
       </a>
+    </div>
+  </div>
+</section>
+
+<!-- COMMUNITY REWARDS -->
+<section class="section" id="rewards" style="background:linear-gradient(180deg,transparent,rgba(255,107,213,.08),transparent)">
+  <div class="container">
+    <h2 class="title">Community Rewards 🎁</h2>
+    <p class="subtitle">40,000+ GGRD via Telegram Bot</p>
+
+    <div style="max-width:900px;margin:48px auto;text-align:center;padding:32px;background:linear-gradient(135deg,var(--card),#1a1537);border:3px solid var(--lime);border-radius:24px">
+      <p style="color:var(--muted);font-size:18px;margin-bottom:20px">
+        Join <strong style="color:var(--lime)">@GGRD_Rewards_Bot</strong> to earn GGRD through tasks, competitions & referrals!
+      </p>
+      <a href="https://t.me/GGRD_Rewards_Bot" target="_blank" rel="noopener" class="btn btn--primary" style="font-size:20px;padding:18px 40px">
+        🤖 Join Rewards Bot
+      </a>
+    </div>
+
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:24px;margin:48px 0">
+      <div class="security-card">
+        <div class="security-card__icon">✅</div>
+        <h4 class="security-card__title">Social: 10 GGRD</h4>
+        <p class="security-card__desc">+ 2k lottery | Join TG + wallet</p>
+      </div>
+      <div class="security-card">
+        <div class="security-card__icon">💰</div>
+        <h4 class="security-card__title">Purchase: 20 GGRD</h4>
+        <p class="security-card__desc">Buy 5+ USD | Max 300</p>
+      </div>
+      <div class="security-card">
+        <div class="security-card__icon">🏆</div>
+        <h4 class="security-card__title">TOP 100: 50 GGRD</h4>
+        <p class="security-card__desc">First 100 holders ≥2,500</p>
+      </div>
+      <div class="security-card">
+        <div class="security-card__icon">🎰</div>
+        <h4 class="security-card__title">Lottery: 10k GGRD</h4>
+        <p class="security-card__desc">Hold 2,500+ Day 0 & 7</p>
+      </div>
+      <div class="security-card">
+        <div class="security-card__icon">📊</div>
+        <h4 class="security-card__title">Biggest: 20k GGRD</h4>
+        <p class="security-card__desc">Highest 30-day avg</p>
+      </div>
+      <div class="security-card">
+        <div class="security-card__icon">👥</div>
+        <h4 class="security-card__title">Referral: 5 GGRD</h4>
+        <p class="security-card__desc">10k pool | Day 10</p>
+      </div>
+    </div>
+
+    <div style="text-align:center">
+      <p style="color:var(--lime);font-size:24px;font-weight:800;font-family:Bangers,cursive">Total: 53,000+ GGRD</p>
     </div>
   </div>
 </section>
