Fix: Add missing links to donation-policy.html and PDF
- Added donation-policy.html link in navigation
- Added GGRD_Whitepaper_EN.pdf download link in whitepaper section
- All internal links now working properly

--- a/index.html
+++ b/index.html
@@ -1897,7 +1897,8 @@ a:focus-visible,button:focus-visible{
           <a href="https://solscan.io" target="_blank" rel="noopener">Solscan Explorer</a>
           <a href="https://jup.ag" target="_blank" rel="noopener">Jupiter Aggregator</a>
           <a href="https://dexscreener.com/solana" target="_blank" rel="noopener">DEXScreener</a>
-          <a href="GGRD_Whitepaper_EN.html" target="_blank" rel="noopener">Open Whitepaper (EN)</a>
+          <a href="GGRD_Whitepaper_EN.html" target="_blank" rel="noopener">Open Whitepaper (HTML)</a>
+          <a href="GGRD_Whitepaper_EN.pdf" target="_blank" rel="noopener">Download PDF</a>
         </div>
       </div>
 
