Fix: Add donation-policy.html link to navigation (final)

--- a/index.html
+++ b/index.html
@@ -1049,6 +1049,7 @@ a:focus-visible,button:focus-visible{
       <a href="#contracts">Contracts</a>
       <a href="#how">Fair Launch</a>
       <a href="#charity">Charity</a>
+      <a href="donation-policy.html">Donation Policy</a>
       <a href="#rewards">Rewards</a>
       <a href="#whitepaper">Whitepaper</a>
       <a href="#roadmap">Roadmap</a>
