--- a/donation-policy.html
+++ b/donation-policy.html
@@ -4,10 +4,28 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="robots" content="index,follow">
-<title>Donation Policy | GGRD — Giggle Reloaded</title>
-<meta name="description" content="GGRD Charity Treasury Donation Policy: transparent pediatric cancer support via community-selected verified charitable organizations.">
+<title>Donation Policy | GGRD – Giggle Reloaded Charity Treasury</title>
+<meta name="description" content="GGRD Charity Treasury Donation Policy: transparent pediatric cancer support via community-selected verified charitable organizations with multisig execution.">
 <link rel="canonical" href="https://ggrd.me/donation-policy.html">
 <link rel="icon" type="image/png" href="img/ggrd-logo-512.png">
+
+<!-- Open Graph -->
+<meta property="og:type" content="article">
+<meta property="og:site_name" content="Giggle Reloaded">
+<meta property="og:url" content="https://ggrd.me/donation-policy.html">
+<meta property="og:title" content="GGRD Donation Policy – Community-Voted Charity Treasury">
+<meta property="og:description" content="How the GGRD Charity Treasury works: beneficiary selection via community vote, multisig execution, and transparent reporting for pediatric cancer support.">
+<meta property="og:image" content="https://ggrd.me/img/ggrd-logo-512.png">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@ContactGiggle">
+<meta name="twitter:title" content="GGRD Donation Policy – Community-Voted Charity Treasury">
+<meta name="twitter:description" content="How the GGRD Charity Treasury works: beneficiary selection via community vote, multisig execution, and transparent reporting.">
+<meta name="twitter:image" content="https://ggrd.me/img/ggrd-logo-512.png">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bangers&family=Inter:wght@400;600;800&display=swap">
 <style>
 *,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
