Fix: Footer links (Solscan, Jupiter, GeckoTerminal), whitepaper URL, clean navigation

--- a/GGRD_Whitepaper_EN.html
+++ b/GGRD_Whitepaper_EN.html
@@ -1487,7 +1487,7 @@
     <p><strong>Document Control</strong></p>
     <p>Version: 1.3 | Last Updated: November 25, 2025 | Next Review: [Post-Deployment]</p>
     <p><strong>Revision Notes:</strong> Fixed section numbering; clarified operational pause policy; improved terminology; moved DBC details to Appendix; added glossary and non-predictive charts/scenario table</p>
-    <p>Latest Version: <a href="https://ggrd.me/whitepaper">https://ggrd.me/whitepaper</a></p>
+    <p>Latest Version: <a href="https://ggrd.me/GGRD_Whitepaper_EN.html">https://ggrd.me/GGRD_Whitepaper_EN.html</a></p>
     <p style="margin-top: 0.5cm;">For questions or clarifications, please refer to the official channels listed in Section 14.</p>
 </div>
 
