--- a/donation-policy.html
+++ b/donation-policy.html
@@ -120,7 +120,7 @@ code{
 </head>
 <body>
 
-<a href="index.html" class="back-link">← Back to Home</a>
+<a href="/" class="back-link">← Back to Home</a>
 
 <h1>Donation Policy</h1>
 <p style="font-size:20px;color:#ffd447;margin-bottom:40px">
@@ -384,7 +384,7 @@ code{
   </p>
 </div>
 
-<a href="index.html" class="back-link">← Back to Home</a>
+<a href="/" class="back-link">← Back to Home</a>
 
 <p style="text-align:center;margin-top:60px;color:#666;font-size:14px">
   © 2024 Giggle Reloaded. Built with 💜 for pediatric cancer support.
