--- a/index.html
+++ b/index.html
@@ -1935,11 +1935,12 @@ a:focus-visible,button:focus-visible{
       <div class="footer__section">
         <h3>Resources</h3>
         <div class="footer__links">
-          <a href="https://solscan.io" target="_blank" rel="noopener">Solscan Explorer</a>
-          <a href="https://jup.ag" target="_blank" rel="noopener">Jupiter Aggregator</a>
-          <a href="https://dexscreener.com/solana" target="_blank" rel="noopener">DEXScreener</a>
-          <a href="GGRD_Whitepaper_EN.html" target="_blank" rel="noopener">Open Whitepaper (HTML)</a>
-          <a href="GGRD_Whitepaper_EN.pdf" target="_blank" rel="noopener">Download PDF</a>
+          <a href="https://solscan.io/token/TR97dHmm8nXVndTcxew21138AchNgrk2BhEJGXMybdE" target="_blank" rel="noopener">Solscan</a>
+          <a href="https://explorer.solana.com/address/TR97dHmm8nXVndTcxew21138AchNgrk2BhEJGXMybdE" target="_blank" rel="noopener">Solana Explorer</a>
+          <a href="https://jup.ag/tokens/TR97dHmm8nXVndTcxew21138AchNgrk2BhEJGXMybdE" target="_blank" rel="noopener">Jupiter</a>
+          <a href="https://www.geckoterminal.com/pl/solana/pools/HWzDBQcPpmGk5J9EXaLQnF4TfndP2pYAzCxBTyfjbnUb" target="_blank" rel="noopener" style="display:inline-flex;align-items:center;gap:6px"><img src="img/geckoterminal_light.svg" alt="" style="height:16px;width:auto;filter:brightness(0) invert(1)" onerror="this.style.display='none'">GeckoTerminal</a>
+          <a href="GGRD_Whitepaper_EN.html" target="_blank" rel="noopener">Whitepaper (HTML)</a>
+          <a href="GGRD_Whitepaper_EN.pdf" target="_blank" rel="noopener">Whitepaper (PDF)</a>
         </div>
       </div>
 
