Fix: Footer links, GeckoTerminal buttons, contact email, whitepaper URL, H1 hierarchy

--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@ a:focus-visible,button:focus-visible{
         VERIFIED ON
       </p>
       
-      <a href="https://www.geckoterminal.com/" 
+      <a href="https://www.geckoterminal.com/solana/pools/HWzDBQcPpmGk5J9EXaLQnF4TfndP2pYAzCxBTyfjbnUb" 
          target="_blank" 
          rel="noopener noreferrer"
          style="display: inline-flex; align-items: center; gap: 12px; text-decoration: none; transition: transform 0.2s ease, opacity 0.2s ease;"
@@ -1401,6 +1401,9 @@ a:focus-visible,button:focus-visible{
         </a>
         <a href="https://jup.ag/tokens/TR97dHmm8nXVndTcxew21138AchNgrk2BhEJGXMybdE" target="_blank" rel="noopener" class="btn btn--outline" style="font-size:14px;padding:10px 24px">
           View on Jupiter
+        </a>
+        <a href="https://www.geckoterminal.com/solana/pools/HWzDBQcPpmGk5J9EXaLQnF4TfndP2pYAzCxBTyfjbnUb" target="_blank" rel="noopener" class="btn btn--outline" style="font-size:14px;padding:10px 24px">
+          View on GeckoTerminal
         </a>
       </div>
     </div>
@@ -1905,6 +1908,7 @@ a:focus-visible,button:focus-visible{
             <a href="https://x.com/ContactGiggle" target="_blank" rel="noopener" style="color:var(--aqua)">@ContactGiggle</a>
           </li>
           <li>Main website: <strong>ggrd.me</strong></li>
+          <li>Email: <a href="mailto:contact@ggrd.me" style="color:var(--aqua)">contact@ggrd.me</a></li>
         </ul>
 
         <p style="color:var(--muted);font-size:16px;line-height:1.8;margin-top:18px;">
@@ -1938,7 +1942,7 @@ a:focus-visible,button:focus-visible{
           <a href="https://solscan.io/token/TR97dHmm8nXVndTcxew21138AchNgrk2BhEJGXMybdE" target="_blank" rel="noopener">Solscan</a>
           <a href="https://explorer.solana.com/address/TR97dHmm8nXVndTcxew21138AchNgrk2BhEJGXMybdE" target="_blank" rel="noopener">Solana Explorer</a>
           <a href="https://jup.ag/tokens/TR97dHmm8nXVndTcxew21138AchNgrk2BhEJGXMybdE" target="_blank" rel="noopener">Jupiter</a>
-          <a href="https://www.geckoterminal.com/pl/solana/pools/HWzDBQcPpmGk5J9EXaLQnF4TfndP2pYAzCxBTyfjbnUb" target="_blank" rel="noopener" style="display:inline-flex;align-items:center;gap:6px"><img src="img/geckoterminal_light.svg" alt="" style="height:16px;width:auto;filter:brightness(0) invert(1)" onerror="this.style.display='none'">GeckoTerminal</a>
+          <a href="https://www.geckoterminal.com/solana/pools/HWzDBQcPpmGk5J9EXaLQnF4TfndP2pYAzCxBTyfjbnUb" target="_blank" rel="noopener" style="display:inline-flex;align-items:center;gap:6px"><img src="img/geckoterminal_light.svg" alt="" style="height:16px;width:auto;filter:brightness(0) invert(1)" onerror="this.style.display='none'">GeckoTerminal</a>
           <a href="GGRD_Whitepaper_EN.html" target="_blank" rel="noopener">Whitepaper (HTML)</a>
           <a href="GGRD_Whitepaper_EN.pdf" target="_blank" rel="noopener">Whitepaper (PDF)</a>
         </div>
