Add: PDF download button, contact email; Fix: Footer links style, GeckoTerminal URLs

--- a/index.html
+++ b/index.html
@@ -1820,9 +1820,12 @@ a:focus-visible,button:focus-visible{
       </div>
     </div>
 
-    <div style="text-align:center;margin-top:48px">
+    <div style="text-align:center;margin-top:48px;display:flex;gap:16px;justify-content:center;flex-wrap:wrap">
       <a href="GGRD_Whitepaper_EN.html" target="_blank" rel="noopener" class="btn btn--aqua" style="font-size:20px;padding:18px 40px">
         📄 Open Full Whitepaper (HTML)
+      </a>
+      <a href="GGRD_Whitepaper_EN.pdf" target="_blank" rel="noopener" class="btn btn--primary" style="font-size:20px;padding:18px 40px">
+        ⬇️ Download PDF
       </a>
     </div>
 
@@ -1942,7 +1945,7 @@ a:focus-visible,button:focus-visible{
           <a href="https://solscan.io/token/TR97dHmm8nXVndTcxew21138AchNgrk2BhEJGXMybdE" target="_blank" rel="noopener">Solscan</a>
           <a href="https://explorer.solana.com/address/TR97dHmm8nXVndTcxew21138AchNgrk2BhEJGXMybdE" target="_blank" rel="noopener">Solana Explorer</a>
           <a href="https://jup.ag/tokens/TR97dHmm8nXVndTcxew21138AchNgrk2BhEJGXMybdE" target="_blank" rel="noopener">Jupiter</a>
-          <a href="https://www.geckoterminal.com/solana/pools/HWzDBQcPpmGk5J9EXaLQnF4TfndP2pYAzCxBTyfjbnUb" target="_blank" rel="noopener" style="display:inline-flex;align-items:center;gap:6px"><img src="img/geckoterminal_light.svg" alt="" style="height:16px;width:auto;filter:brightness(0) invert(1)" onerror="this.style.display='none'">GeckoTerminal</a>
+          <a href="https://www.geckoterminal.com/solana/pools/HWzDBQcPpmGk5J9EXaLQnF4TfndP2pYAzCxBTyfjbnUb" target="_blank" rel="noopener">GeckoTerminal</a>
           <a href="GGRD_Whitepaper_EN.html" target="_blank" rel="noopener">Whitepaper (HTML)</a>
           <a href="GGRD_Whitepaper_EN.pdf" target="_blank" rel="noopener">Whitepaper (PDF)</a>
         </div>
