feat: add OG banner, update meta tags, and update documentation

--- a/donation-policy.html
+++ b/donation-policy.html
@@ -15,14 +15,14 @@
 <meta property="og:url" content="https://ggrd.me/donation-policy.html">
 <meta property="og:title" content="GGRD Donation Policy – Community-Voted Charity Treasury">
 <meta property="og:description" content="How the GGRD Charity Treasury works: beneficiary selection via community vote, multisig execution, and transparent reporting for pediatric cancer support.">
-<meta property="og:image" content="https://ggrd.me/img/ggrd-logo-512.png">
+<meta property="og:image" content="https://ggrd.me/img/ggrd-og-banner.png">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@ContactGiggle">
 <meta name="twitter:title" content="GGRD Donation Policy – Community-Voted Charity Treasury">
 <meta name="twitter:description" content="How the GGRD Charity Treasury works: beneficiary selection via community vote, multisig execution, and transparent reporting.">
-<meta name="twitter:image" content="https://ggrd.me/img/ggrd-logo-512.png">
+<meta name="twitter:image" content="https://ggrd.me/img/ggrd-og-banner.png">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
