SEO: fix meta text, add schema, robots sitemap

--- a/donation-policy.html
+++ b/donation-policy.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="robots" content="index,follow">
 <title>Donation Policy | GGRD – Giggle Reloaded Charity Treasury</title>
-<meta name="description" content="GGRD Charity Treasury Donation Policy: transparent pediatric cancer support via community-selected verified charitable organizations with multisig execution.">
+<meta name="description" content="GGRD Charity Treasury Donation Policy: transparent community vote, vetted beneficiaries, multisig execution, and public reporting for pediatric cancer support.">
 <link rel="canonical" href="https://ggrd.me/donation-policy.html">
 <link rel="icon" type="image/png" href="img/ggrd-logo-512.png">
 
@@ -14,15 +14,44 @@
 <meta property="og:site_name" content="Giggle Reloaded">
 <meta property="og:url" content="https://ggrd.me/donation-policy.html">
 <meta property="og:title" content="GGRD Donation Policy – Community-Voted Charity Treasury">
-<meta property="og:description" content="How the GGRD Charity Treasury works: beneficiary selection via community vote, multisig execution, and transparent reporting for pediatric cancer support.">
+<meta property="og:description" content="Transparent rules for the GGRD Charity Treasury: community vote, vetted beneficiaries, multisig execution, and public reporting for pediatric cancer support.">
 <meta property="og:image" content="https://ggrd.me/img/ggrd-og-banner.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Giggle Reloaded (GGRD) banner">
+<meta name="twitter:image:alt" content="Giggle Reloaded (GGRD) banner">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@ContactGiggle">
 <meta name="twitter:title" content="GGRD Donation Policy – Community-Voted Charity Treasury">
-<meta name="twitter:description" content="How the GGRD Charity Treasury works: beneficiary selection via community vote, multisig execution, and transparent reporting.">
+<meta name="twitter:description" content="Transparent rules for the GGRD Charity Treasury: community vote, multisig execution, and public reporting.">
 <meta name="twitter:image" content="https://ggrd.me/img/ggrd-og-banner.png">
+
+<!-- Structured Data: Article -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "GGRD Donation Policy – Community-Voted Charity Treasury",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://ggrd.me/donation-policy.html"
+  },
+  "dateModified": "2025-12-07",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Giggle Reloaded",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://ggrd.me/img/ggrd-logo-512.png"
+    }
+  },
+  "image": [
+    "https://ggrd.me/img/ggrd-og-banner.png"
+  ]
+}
+</script>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -369,8 +398,8 @@ code{
 <h2>8. Contact & Questions</h2>
 <p>For questions about this Donation Policy or charity operations:</p>
 <ul>
-  <li><strong>Telegram Community:</strong> <a href="https://t.me/GGRDchat" target="_blank" style="color:#46e6ff">@GGRDchat</a></li>
-  <li><strong>Official Channel:</strong> <a href="https://t.me/GGRDofficial" target="_blank" style="color:#46e6ff">@GGRDofficial</a></li>
+  <li><strong>Telegram Community:</strong> <a href="https://t.me/GGRDchat" target="_blank" rel="noopener noreferrer" style="color:#46e6ff">@GGRDchat</a></li>
+  <li><strong>Official Channel:</strong> <a href="https://t.me/GGRDofficial" target="_blank" rel="noopener noreferrer" style="color:#46e6ff">@GGRDofficial</a></li>
   <li><strong>Website:</strong> <a href="https://ggrd.me" style="color:#46e6ff">ggrd.me</a></li>
 </ul>
 
