--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="theme-color" content="#09031a">
 
 <title>Giggle Reloaded (GGRD) – Solana Fair Launch, Multisig Treasury &amp; Community Charity Vote</title>
-<meta name="description" content="Giggle Reloaded (GGRD) on Solana: fair launch via DBC, multisig treasuries, transparent reporting, and community-voted pediatric cancer support. Verify official links here.">
+<meta name="description" content="Giggle Reloaded (GGRD) on Solana: fair launch via DBC, multisig treasury, and a community charity vote for pediatric cancer support. Verify official links here.">
 
 <link rel="canonical" href="https://ggrd.me/">
 
@@ -22,14 +22,18 @@
 <meta property="og:site_name" content="Giggle Reloaded">
 <meta property="og:url" content="https://ggrd.me/">
 <meta property="og:title" content="Giggle Reloaded (GGRD) – Solana Fair Launch, Multisig Treasury &amp; Community Charity Vote">
-<meta property="og:description" content="Giggle Reloaded (GGRD) on Solana: fair launch via DBC, multisig treasuries, transparent reporting, and community-voted pediatric cancer support. Verify official links here.">
+<meta property="og:description" content="Giggle Reloaded (GGRD) on Solana: fair launch via DBC, multisig treasury, and a community charity vote for pediatric cancer support. Verify official links here.">
 <meta property="og:image" content="https://ggrd.me/img/ggrd-og-banner.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Giggle Reloaded (GGRD) banner">
+<meta name="twitter:image:alt" content="Giggle Reloaded (GGRD) banner">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@ContactGiggle">
 <meta name="twitter:title" content="Giggle Reloaded (GGRD) – Robin of Gains">
-<meta name="twitter:description" content="Fair-launch memecoin on Solana with 10% supply locked for community-voted pediatric cancer support.">
+<meta name="twitter:description" content="Fair-launch memecoin on Solana via DBC with multisig treasury and a community charity vote for pediatric cancer support.">
 <meta name="twitter:image" content="https://ggrd.me/img/ggrd-og-banner.png">
 
 <!-- Structured Data: Organization -->
@@ -1428,7 +1432,7 @@ a:focus-visible,button:focus-visible{
     <p class="subtitle">All on-chain addresses – verify before you ape 🔓</p>
 
     <div class="verify-box">
-      <h4 class="verify-box__title">🔒 How to Verify Official Links</h4>
+      <h3 class="verify-box__title">🔒 How to Verify Official Links</h3>
       <ul class="verify-box__list">
         <li><strong>Single source of truth:</strong> ggrd.me and official X/TG channels are the only places for official links.</li>
         <li><strong>Copy-paste addresses</strong> directly from this page – never type manually.</li>
