SEO: fix meta text, add schema, robots sitemap, update whitepaper PDF, fix emoji encoding

--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@ a:focus-visible,button:focus-visible{
     <span class="marquee__item">🏹 FAIR-LAUNCH DBC</span>
     <span class="marquee__item">💸 ZERO TAX</span>
     <span class="marquee__item">🔒 MULTISIG TREASURIES</span>
-    <span class="marquee__item">💚 10% CHARITY TREASURY</span>
+    <span class="marquee__item">&#x1F49A; 10% CHARITY TREASURY</span>
     <span class="marquee__item">🦊 ROBIN OF GAINS</span>
     <span class="marquee__item">🏹 FAIR-LAUNCH DBC</span>
     <span class="marquee__item">💸 ZERO TAX</span>
@@ -1196,7 +1196,7 @@ a:focus-visible,button:focus-visible{
   <div class="stickers">
     <div class="sticker">🏹 FAIR LAUNCH ON SOLANA</div>
     <div class="sticker">💸 0% BUY / SELL TAX</div>
-    <div class="sticker">💚 10% CHARITY TREASURY</div>
+    <div class="sticker">&#x1F49A; 10% CHARITY TREASURY</div>
     <div class="sticker">🔒 SQUADS MULTISIG</div>
     <div class="sticker">📋 ON-CHAIN TRANSPARENCY</div>
     <div class="sticker">🦊 PURE MEME ENERGY</div>
@@ -1293,7 +1293,7 @@ a:focus-visible,button:focus-visible{
 
       <div class="allocation__item">
         <span class="allocation__percentage">10%</span>
-        <span class="allocation__label">Charity Treasury (💚)</span>
+        <span class="allocation__label">Charity Treasury</span>
         <p class="allocation__desc">
           100,000 GGRD locked in a dedicated Charity Treasury multisig, used for
           donations to <strong>community-voted pediatric oncology organizations</strong>.
@@ -2136,7 +2136,7 @@ function copyAddress(elementId, button) {
 
 console.log('%c🏹 GGRD - Robin of Gains 🦊', 'color: #ff6bd5; font-size: 24px; font-weight: bold;');
 console.log('%cWelcome to the pack, fellow degen!', 'color: #ffd447; font-size: 16px;');
-console.log('%c💚 10% of supply is locked in a Charity Treasury for community-voted pediatric cancer support.', 'color: #4ade80; font-size: 13px;');
+console.log('%c10% of supply is locked in a Charity Treasury for community-voted pediatric cancer support.', 'color: #4ade80; font-size: 13px;');
 console.log('%c📄 Read the full whitepaper: GGRD_Whitepaper_EN.html', 'color: #46e6ff; font-size: 12px;');
 </script>
 
