Whitepaper v1.0: fix cover page, remove Document Control, add contact email info

--- a/index.html
+++ b/index.html
@@ -1926,7 +1926,7 @@ a:focus-visible,button:focus-visible{
             <a href="https://x.com/ContactGiggle" target="_blank" rel="noopener" style="color:var(--aqua)">@ContactGiggle</a>
           </li>
           <li>Main website: <strong>ggrd.me</strong></li>
-          <li>Email: <a href="mailto:contact@ggrd.me" style="color:var(--aqua)">contact@ggrd.me</a></li>
+          <li>Email (listings & verification only): <a href="mailto:contact@ggrd.me" style="color:var(--aqua)">contact@ggrd.me</a></li>
         </ul>
 
         <p style="color:var(--muted);font-size:16px;line-height:1.8;margin-top:18px;">
