--- a/GGRD_Whitepaper_EN.html
+++ b/GGRD_Whitepaper_EN.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index,follow">
-    <title>Giggle Reloaded ($GGRD) Whitepaper v1.3 — Fair Launch, Tokenomics &amp; Charity Treasury</title>
+    <title>Giggle Reloaded ($GGRD) Whitepaper v1.0 — Fair Launch, Tokenomics &amp; Charity Treasury</title>
     <meta name="description" content="Official GGRD Whitepaper: Solana fair launch via Meteora DBC, tokenomics, LP policy, charity treasury governance, and multisig security.">
     <link rel="canonical" href="https://ggrd.me/GGRD_Whitepaper_EN.html">
     <link rel="icon" type="image/png" href="img/ggrd-logo-512.png">
@@ -13,7 +13,7 @@
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="Giggle Reloaded">
     <meta property="og:url" content="https://ggrd.me/GGRD_Whitepaper_EN.html">
-    <meta property="og:title" content="Giggle Reloaded ($GGRD) Whitepaper v1.3">
+    <meta property="og:title" content="Giggle Reloaded ($GGRD) Whitepaper v1.0">
     <meta property="og:description" content="Official GGRD Whitepaper: Solana fair launch via Meteora DBC, tokenomics, LP policy, charity treasury governance, and multisig security.">
     <meta property="og:image" content="https://ggrd.me/img/ggrd-og-banner.png">
     <meta property="og:image:width" content="1200">
@@ -24,7 +24,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@ContactGiggle">
-    <meta name="twitter:title" content="Giggle Reloaded ($GGRD) Whitepaper v1.3">
+    <meta name="twitter:title" content="Giggle Reloaded ($GGRD) Whitepaper v1.0">
     <meta name="twitter:description" content="Official GGRD Whitepaper: fair launch via Meteora DBC, tokenomics, charity treasury, and multisig security.">
     <meta name="twitter:image" content="https://ggrd.me/img/ggrd-og-banner.png">
 
@@ -33,7 +33,7 @@
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Giggle Reloaded ($GGRD) Whitepaper v1.3",
+      "headline": "Giggle Reloaded ($GGRD) Whitepaper v1.0",
       "mainEntityOfPage": {
         "@type": "WebPage",
         "@id": "https://ggrd.me/GGRD_Whitepaper_EN.html"
@@ -88,11 +88,13 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
+            min-height: 90vh;
+            height: auto;
             text-align: center;
             background: linear-gradient(135deg, #f0fdf4 0%, #ffffff 100%);
             border: 3px solid #9DFF00;
-            padding: 3cm;
+            padding: 2cm 3cm;
+            margin: 0;
         }
         
         .cover h1 {
@@ -351,7 +353,7 @@
     </div>
     
     <div class="meta">
-        <p><strong>Version:</strong> 1.3</p>
+        <p><strong>Version:</strong> 1.0</p>
         <p><strong>Date:</strong> November 25, 2025</p>
         <p><strong>Network:</strong> Solana Mainnet-Beta</p>
         <p><strong>Website:</strong> https://ggrd.me</p>
@@ -1147,6 +1149,10 @@
         <td>Telegram Community Chat</td>
         <td><a href="https://t.me/GGRDchat">https://t.me/GGRDchat</a></td>
     </tr>
+    <tr>
+        <td>Email (listings &amp; verification only)</td>
+        <td><a href="mailto:contact@ggrd.me">contact@ggrd.me</a></td>
+    </tr>
 </table>
 
 <div class="warning">
@@ -1158,7 +1164,7 @@
 <ul>
     <li>All critical announcements (launch dates, contract addresses, charity reports, governance proposals) are published on <strong>https://ggrd.me</strong> and in <strong>@GGRDofficial</strong></li>
     <li>Community questions, feedback and informal polls are handled in <strong>@GGRDchat</strong></li>
-    <li>The team does <strong>not</strong> provide official project support via email or private DMs. Any unsolicited messages asking for funds, seed phrases, or private keys are scams</li>
+    <li>The official email address (<strong>contact@ggrd.me</strong>) is reserved <strong>exclusively</strong> for exchange listings, verification requests, and partnership inquiries. The team does <strong>not</strong> provide user support via email or private DMs. Any unsolicited messages asking for funds, seed phrases, or private keys are scams</li>
 </ul>
 
 <h3>11.3. Branding &amp; Content Strategy</h3>
@@ -1341,7 +1347,7 @@
 <h3>14.2. Support Policy</h3>
 
 <ul>
-    <li>The project does <strong>not</strong> operate any official support email address</li>
+    <li>The official email <strong>contact@ggrd.me</strong> is used <strong>only</strong> for exchange listings, verification requests, and partnership inquiries&mdash;not for user support</li>
     <li>Direct contact with the team and moderators takes place <strong>only</strong> via the official Telegram community chat <strong>@GGRDchat</strong></li>
     <li>Team members will never ask for private keys, seed phrases or direct transfers in DMs. Any such requests are scams</li>
 </ul>
@@ -1511,14 +1517,6 @@
 
 <div class="info">
     <p><strong>Important:</strong> Market cap, liquidity depth, exchange availability and sell-through conditions can differ materially. These examples are not forecasts and should not be used as investment expectations.</p>
-</div>
-
-<div class="footer">
-    <p><strong>Document Control</strong></p>
-    <p>Version: 1.3 | Last Updated: November 25, 2025 | Next Review: December 7, 2025</p>
-    <p><strong>Revision Notes:</strong> Fixed section numbering; clarified operational pause policy; improved terminology; moved DBC details to Appendix; added glossary and non-predictive charts/scenario table</p>
-    <p>Latest Version: <a href="https://ggrd.me/GGRD_Whitepaper_EN.html">https://ggrd.me/GGRD_Whitepaper_EN.html</a></p>
-    <p style="margin-top: 0.5cm;">For questions or clarifications, please refer to the official channels listed in Section 14.</p>
 </div>
 
 </div>
