Update footer: 2025 copyright, official links, contact info, disclaimer

--- a/donation-policy.html
+++ b/donation-policy.html
@@ -415,9 +415,20 @@ code{
 
 <a href="/" class="back-link">← Back to Home</a>
 
-<p style="text-align:center;margin-top:60px;color:#666;font-size:14px">
-  © 2025 Giggle Reloaded. Built with 💜 for pediatric cancer support.
-</p>
+<div style="text-align:center;margin-top:60px;padding:30px 20px;border-top:1px solid rgba(255,255,255,0.1);font-size:14px;color:#999">
+  <p style="margin-bottom:8px">
+    <strong>Official:</strong> <a href="https://ggrd.me" style="color:#9DFF00">ggrd.me</a> · 
+    <strong>Docs:</strong> <a href="GGRD_Whitepaper_EN.html" style="color:#d0c7ff">Whitepaper</a> · <a href="donation-policy.html" style="color:#d0c7ff">Donation Policy</a> · 
+    <strong>Community:</strong> <a href="https://t.me/GGRDofficial" target="_blank" rel="noopener noreferrer" style="color:#d0c7ff">Telegram</a> · <a href="https://x.com/ContactGiggle" target="_blank" rel="noopener noreferrer" style="color:#d0c7ff">X</a>
+  </p>
+  <p style="margin-bottom:8px">
+    <strong>Contact:</strong> <a href="mailto:contact@ggrd.me" style="color:#9DFF00">contact@ggrd.me</a> <span style="opacity:.7">(listings & verification only)</span>
+  </p>
+  <p style="font-size:12px;opacity:.7;margin-bottom:12px">
+    ⚠️ Not financial advice. Verify all links before interacting.
+  </p>
+  <p>© 2025 Giggle Reloaded ($GGRD). All rights reserved.</p>
+</div>
 
 </body>
 </html>
