--- a/index.html
+++ b/index.html
@@ -2054,10 +2054,18 @@ a:focus-visible,button:focus-visible{
     </div>
 
     <div class="footer__bottom">
-      <p>© 2024 Giggle Reloaded. Built with 💜 by the community. All rights reserved.</p>
-      <p style="margin-top:12px;font-size:12px;opacity:.7">
-        Not affiliated with any other "Giggle" projects or tokens.
+      <p style="margin-bottom:8px">
+        <strong>Official:</strong> <a href="https://ggrd.me" style="color:#9DFF00">ggrd.me</a> · 
+        <strong>Docs:</strong> <a href="GGRD_Whitepaper_EN.html">Whitepaper</a> · <a href="donation-policy.html">Donation Policy</a> · 
+        <strong>Community:</strong> <a href="https://t.me/GGRDofficial" target="_blank" rel="noopener">Telegram</a> · <a href="https://x.com/ContactGiggle" target="_blank" rel="noopener">X</a>
       </p>
+      <p style="margin-bottom:8px">
+        <strong>Contact:</strong> <a href="mailto:contact@ggrd.me" style="color:#9DFF00">contact@ggrd.me</a> <span style="opacity:.7">(listings & verification only)</span>
+      </p>
+      <p style="font-size:12px;opacity:.7;margin-bottom:12px">
+        ⚠️ Not financial advice. Verify all links before interacting. Not affiliated with any other "Giggle" projects.
+      </p>
+      <p>© 2025 Giggle Reloaded ($GGRD). All rights reserved.</p>
     </div>
   </div>
 </footer>
